Closed
Bug 628794
Opened 15 years ago
Closed 15 years ago
Crash [@ nsIDOMElementCSSInlineStyle_GetStyle], SVG element with HTML __proto__
Categories
(Core :: XPConnect, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla5
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | - |
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(Keywords: crash, testcase)
Crash Data
Attachments
(2 files)
|
228 bytes,
text/html
|
Details | |
|
12.86 KB,
patch
|
peterv
:
review+
dveditz
:
approval2.0-
|
Details | Diff | Splinter Review |
Like bug 585745, but with SVG instead of MathML.
| Reporter | ||
Comment 1•15 years ago
|
||
Only crashes in debug builds.
| Assignee | ||
Comment 2•15 years ago
|
||
Ugh. I hate JS.... peter, _this_ one we could solve by having a separate base class that SVG inherits from that doesn't include GetStyle and casting to that class here (MathML, HTML, XUL would all still inherit from it). Or I could expand the namespace check to exclude SVG. Preferences?
Assignee: nobody → bzbarsky
blocking2.0: --- → ?
Priority: -- → P1
Comment 3•15 years ago
|
||
I'm starting to remember why I didn't use custom unwrapping for GetStyle :-(. I'd personally go with the separate base class, but both options are fine.
Comment 4•15 years ago
|
||
Not blocking on this at this late of a point in the release. But I'd approve a safe fix.
blocking2.0: ? → -
| Assignee | ||
Comment 5•15 years ago
|
||
Attachment #515739 -
Flags: review?(peterv)
| Assignee | ||
Updated•15 years ago
|
Whiteboard: [need review]
Comment 6•15 years ago
|
||
Comment on attachment 515739 [details] [diff] [review]
SVG and HTML/XUL .style come from different interfaces.
The other option is to leave nsStyledElement as is, and name the new class nsStyledElementWithElementCSSInlineStyle.
Attachment #515739 -
Flags: review?(peterv) → review+
| Assignee | ||
Updated•15 years ago
|
Whiteboard: [need review] → [need landing]
| Assignee | ||
Comment 7•15 years ago
|
||
Flags: in-testsuite+
Whiteboard: [need landing] → fixed-in-cedar
Target Milestone: --- → mozilla2.2
| Assignee | ||
Comment 8•15 years ago
|
||
Comment on attachment 515739 [details] [diff] [review]
SVG and HTML/XUL .style come from different interfaces.
We should probably land this crash fix on 2.0.x too.
Attachment #515739 -
Flags: approval2.0?
Comment 9•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-cedar
Updated•14 years ago
|
Attachment #515739 -
Flags: approval2.0? → approval2.0-
Updated•14 years ago
|
Crash Signature: [@ nsIDOMElementCSSInlineStyle_GetStyle]
You need to log in
before you can comment on or make changes to this bug.
Description
•