Bug 628794.  SVG and HTML/XUL .style come from different interfaces.  r=peterv